--- a/my-portfolio-server/package.json
+++ b/my-portfolio-server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server.js",
     "server": "nodemon index.js",
     "client": "npm start",
     "dev": "concurrently \"npm run server\" \"npm run client\""
