--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "npm run build:server && npm run build:client && npm run copy:client",
     "build:server": "cd my-portfolio-server && npm i && npm run build",
     "build:client": "cd my-portfolio && npm i && npm run build",
-    "copy:client": "mv my-portfolio/build my-portfolio-server/build",
+    "copy:client": "mv my-portfolio/build my-portfolio-server",
     "start": "cd my-portfolio-server && npm start"
   },
   "repository": {
