--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.17.1",
     "node-sass": "^5.0.0",
     "nodemailer": "^6.4.16",
+    "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^2.0.6",
     "reactstrap": "^8.7.1"
   },
