--- a/my-portfolio-server/package.json
+++ b/my-portfolio-server/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.16",
+    "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^2.0.6"
   }
 }
