--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "googleapis": "^39.2.0",
     "node-sass": "^5.0.0",
     "nodemailer": "^6.4.16",
-    "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^2.0.6",
     "reactstrap": "^8.7.1"
   },
